scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/typeOnlyMerge3.errors.txt
b.ts(1,10): error TS2440: Import declaration conflicts with local declaration of 'A'.
c.ts(4,1): error TS2349: This expression is not callable.
  Type 'typeof A' has no call signatures.


==== a.ts (0 errors) ====
    function A() {}
    export type { A };
    
==== b.ts (1 errors) ====
    import { A } from "./a";
             ~
!!! error TS2440: Import declaration conflicts with local declaration of 'A'.
    namespace A {
      export const displayName = "A";
    }
    export { A };
    
==== c.ts (1 errors) ====
    import { A } from "./b";
    A;
    A.displayName;
    A();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof A' has no call signatures.
    